--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $spacing-unit:     30px;
 
 $text-color:       #fdfdfd;
 $background-color: #111;
-$brand-color:      #2a7ae2;
+$brand-color:      #960AA3;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
