--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
 
   {% include head.html %}
 
-  <body>
+  <body class="theme-base-00 layout-reverse sidebar-overlay">
 
     {% include sidebar.html %}
-
+    {% include comments.html %}
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
     <div class="wrap">
