--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,12 @@
 <html lang="en-us">
 
   {% include head.html %}
+  {% include google_analytics.html %}
 
   <body class="theme-base-00 layout-reverse sidebar-overlay">
 
     {% include sidebar.html %}
-    {% include comments.html %}
+
     <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
          content to avoid any CSS collisions with our real content. -->
     <div class="wrap">
@@ -21,6 +22,14 @@
 
       <div class="container content">
         {{ content }}
+
+        {% include comments.html %}
+
+        <div class="footer">
+          <p>
+            &copy; {{ site.time | date: '%Y' }}. esWizardry - All rights reserved.
+          </p>
+        </div>
       </div>
     </div>
 
