modify footer with gh-icon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,7 @@
 
         {% include comments.html %}
 
-        <div class="footer">
-          <p>
-            &copy; {{ site.time | date: '%Y' }}. esWizardry - All rights reserved.
-          </p>
-        </div>
+        {% include footer.html %}
       </div>
     </div>
 
