Edit about page

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -216,7 +216,8 @@ blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
   color: #7a7a7a;
-  border-left: .25rem solid #e5e5e5;
+  border-left: .25rem solid #7C0973;
+  font-style: italic;
 }
 blockquote p:last-child {
   margin-bottom: 0;
