--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -182,11 +182,13 @@ pre code {
 /* Pygments via Jekyll */
 .highlight {
   margin-bottom: 1rem;
-  border-radius: 4px;
+  border: 1px solid #7C0973;
+  border-radius: 5px;
+  padding:1px;
 }
 .highlight pre {
   margin-bottom: 0;
-  background-color:#E5D6E5;
+  background-color:#F5F1F2;
 }
 
 /* Gist via GitHub Pages */
