--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -182,13 +182,13 @@ pre code {
 /* Pygments via Jekyll */
 .highlight {
   margin-bottom: 1rem;
-  border: 1px solid #7C0973;
+  border: 1px solid #e0e0e0;
   border-radius: 5px;
-  padding:1px;
+  padding:0.25px;
 }
 .highlight pre {
   margin-bottom: 0;
-  background-color:#F5F1F2;
+  background-color:#f0f0f0;
 }
 
 /* Gist via GitHub Pages */
