--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,16 @@
       {% endif %}
     {% endfor %}
 
+    <!-- Add tags to sidebar -->
+    {% assign pages_list = site.pages | sort:"url" %}
+    {% for node in pages_list %}
+      {% if node.title != null %}
+        {% if node.layout == "tagspage" %}
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+
     <!-- listing the latest 10 entries -->
     <section>
         <span class="sidebar-nav-item">Recent posts</span>
