--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,10 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <span class="post-date">{{ page.date | date_to_string }} |</span>
+  {% for tag in page.tags %}
+    <a href="{{ site.url }}{{ tag }}"><span class="post-tag">{{ tag }}</span></a>
+  {% endfor %}
   {{ content }}
 </div>
 
