--- a/_layouts/tagspage.html
+++ b/_layouts/tagspage.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title: Tags
 ---
 
 <h1>{{ page.title }}</h1>
@@ -16,7 +15,7 @@ title: Tags
   <h3 id="{{ tag }}">{{ tag }}</h3>
   <ul>
   {% for post in site.tags[tag] %}
-    {{ post.date | date: "%B %d, %Y" }}&raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+      <li>{{ post.date | date: "%B %d, %Y" }}&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
   </ul>
 {% endfor %}
