--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -325,10 +325,20 @@ a.sidebar-nav-item:focus {
 
 /* Meta data line below post title */
 .post-date {
-  display: block;
+  display: inline-block;
   margin-top: -.5rem;
   margin-bottom: 1rem;
   color: #9a9a9a;
+}
+.post-tag {
+  display: inline-block;
+  margin-top: -.5rem;
+  margin-bottom: 1rem;
+  color: #7C0973;
+  padding: .125em .5em;
+  font-size: 75%;
+  background-color: #CFCECE;
+  border-radius: 4px;
 }
 
 /* Related posts */
