--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,13 +17,13 @@
         <ul class="social-media-list">
           {% if site.github_username %}
           <li>
-            <a href="https://github.com/{{ site.github_username }}"><image src="assets/gh-logo.png" /></a>
+            <a href="https://github.com/{{ site.github_username }}"><image src="/assets/gh-logo.jpg" /></a>
           </li>
           {% endif %}
 
           {% if site.twitter_username %}
           <li>
-            <a href="https://twitter.com/{{ site.twitter_username }}"><image src="assets/twtblue-logo.png" /></a>
+            <a href="https://twitter.com/{{ site.twitter_username }}"><image src="/assets/twtblue-logo.jpg" /></a>
           </li>
           {% endif %}
         </ul>
