--- a/public/css/syntax.css
+++ b/public/css/syntax.css
@@ -65,5 +65,5 @@
 .lineno::selection {background-color: transparent;} /* Other major browsers */
 
 /* Add to css/syntax.css */
-.highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:1px solid #ccc; }
+.highlight .lineno { color: #ccc; display:inline-block; padding: 0 5px; border-right:2px solid #7C0973; }
 .highlight pre code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }
