--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }} |</span>
   {% for tag in page.tags %}
-    <a href="{{ site.url }}{{ tag }}"><span class="post-tag">{{ tag }}</span></a>
+    <a href="/{{ tag }}"><span class="post-tag">{{ tag }}</span></a>
   {% endfor %}
   {{ content }}
 </div>
