--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -227,10 +227,10 @@ a.sidebar-nav-item:focus {
   width: 1rem;
   height: .75rem;
   content: "";
-  background-image: -webkit-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
-  background-image:    -moz-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
-  background-image:     -ms-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
-  background-image:         linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
+  background-image: -webkit-linear-gradient(to bottom, #7C0973, #7C0973 20%, #fff 20%, #fff 40%, #7C0973 40%, #7C0973 60%, #fff 60%, #fff 80%, #7C0973 80%, #7C0973 100%);
+  background-image:    -moz-linear-gradient(to bottom, #7C0973, #7C0973 20%, #fff 20%, #fff 40%, #7C0973 40%, #7C0973 60%, #fff 60%, #fff 80%, #7C0973 80%, #7C0973 100%);
+  background-image:     -ms-linear-gradient(to bottom, #7C0973, #7C0973 20%, #fff 20%, #fff 40%, #7C0973 40%, #7C0973 60%, #fff 60%, #fff 80%, #7C0973 80%, #7C0973 100%);
+  background-image:         linear-gradient(to bottom, #7C0973, #7C0973 20%, #fff 20%, #fff 40%, #7C0973 40%, #7C0973 60%, #fff 60%, #fff 80%, #7C0973 80%, #7C0973 100%);
 }
 
 .sidebar-toggle:active,
@@ -243,10 +243,10 @@ a.sidebar-nav-item:focus {
 .sidebar-toggle:active:before,
 #sidebar-checkbox:focus ~ .sidebar-toggle:before,
 #sidebar-checkbox:checked ~ .sidebar-toggle:before {
-  background-image: -webkit-linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
-  background-image:    -moz-linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
-  background-image:     -ms-linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
-  background-image:         linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
+  background-image: -webkit-linear-gradient(to bottom, #fff, #fff 20%, #7C0973 20%, #7C0973 40%, #fff 40%, #fff 60%, #7C0973 60%, #7C0973 80%, #fff 80%, #fff 100%);
+  background-image:    -moz-linear-gradient(to bottom, #fff, #fff 20%, #7C0973 20%, #7C0973 40%, #fff 40%, #fff 60%, #7C0973 60%, #7C0973 80%, #fff 80%, #fff 100%);
+  background-image:     -ms-linear-gradient(to bottom, #fff, #fff 20%, #7C0973 20%, #7C0973 40%, #fff 40%, #fff 60%, #7C0973 60%, #7C0973 80%, #fff 80%, #fff 100%);
+  background-image:         linear-gradient(to bottom, #fff, #fff 20%, #7C0973 20%, #7C0973 40%, #fff 40%, #fff 60%, #7C0973 60%, #7C0973 80%, #fff 80%, #fff 100%);
 }
 
 @media (min-width: 30.1em) {
@@ -454,6 +454,7 @@ a.pagination-item:hover {
 /* Red */
 .theme-base-08 .sidebar,
 .theme-base-08 .sidebar-toggle:active,
+.theme-base-00 #sidebar-checkbox:focus ~ .sidebar-toggle,
 .theme-base-08 #sidebar-checkbox:checked ~ .sidebar-toggle {
   background-color: #ac4142;
 }
@@ -466,6 +467,7 @@ a.pagination-item:hover {
 /* Orange */
 .theme-base-09 .sidebar,
 .theme-base-09 .sidebar-toggle:active,
+.theme-base-00 #sidebar-checkbox:focus ~ .sidebar-toggle,
 .theme-base-09 #sidebar-checkbox:checked ~ .sidebar-toggle {
   background-color: #d28445;
 }
@@ -478,6 +480,7 @@ a.pagination-item:hover {
 /* Yellow */
 .theme-base-0a .sidebar,
 .theme-base-0a .sidebar-toggle:active,
+.theme-base-00 #sidebar-checkbox:focus ~ .sidebar-toggle,
 .theme-base-0a #sidebar-checkbox:checked ~ .sidebar-toggle {
   background-color: #f4bf75;
 }
@@ -490,6 +493,7 @@ a.pagination-item:hover {
 /* Green */
 .theme-base-0b .sidebar,
 .theme-base-0b .sidebar-toggle:active,
+.theme-base-00 #sidebar-checkbox:focus ~ .sidebar-toggle,
 .theme-base-0b #sidebar-checkbox:checked ~ .sidebar-toggle {
   background-color: #90a959;
 }
@@ -502,6 +506,7 @@ a.pagination-item:hover {
 /* Cyan */
 .theme-base-0c .sidebar,
 .theme-base-0c .sidebar-toggle:active,
+.theme-base-00 #sidebar-checkbox:focus ~ .sidebar-toggle,
 .theme-base-0c #sidebar-checkbox:checked ~ .sidebar-toggle {
   background-color: #75b5aa;
 }
@@ -514,6 +519,7 @@ a.pagination-item:hover {
 /* Blue */
 .theme-base-0d .sidebar,
 .theme-base-0d .sidebar-toggle:active,
+.theme-base-00 #sidebar-checkbox:focus ~ .sidebar-toggle,
 .theme-base-0d #sidebar-checkbox:checked ~ .sidebar-toggle {
   background-color: #6a9fb5;
 }
@@ -526,6 +532,7 @@ a.pagination-item:hover {
 /* Magenta */
 .theme-base-0e .sidebar,
 .theme-base-0e .sidebar-toggle:active,
+.theme-base-00 #sidebar-checkbox:focus ~ .sidebar-toggle,
 .theme-base-0e #sidebar-checkbox:checked ~ .sidebar-toggle {
   background-color: #aa759f;
 }
@@ -538,6 +545,7 @@ a.pagination-item:hover {
 /* Brown */
 .theme-base-0f .sidebar,
 .theme-base-0f .sidebar-toggle:active,
+.theme-base-00 #sidebar-checkbox:focus ~ .sidebar-toggle,
 .theme-base-0f #sidebar-checkbox:checked ~ .sidebar-toggle {
   background-color: #8f5536;
 }
@@ -550,6 +558,7 @@ a.pagination-item:hover {
 /* mytheme */
 .theme-base-00 .sidebar,
 .theme-base-00 .sidebar-toggle:active,
+.theme-base-00 #sidebar-checkbox:focus ~ .sidebar-toggle,
 .theme-base-00 #sidebar-checkbox:checked ~ .sidebar-toggle {
   background-color: #7C0973;
 }
